--- a/back-end/.env
+++ b/back-end/.env
@@ -5,3 +5,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:727727@localhost:5433/pizzaria?schema=public"
+
+# Secret JWT https://www.md5hashgenerator.com/   (281df208f2d8c2619eec792edd30e742) => projetoThupizzaria
+JWT_SECRET=281df208f2d8c2619eec792edd30e742
